# time_series_itmo

./: .gitignore  README.md  hw_1.ipynb  pyproject.toml
